--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,12 +1,12 @@
 .footer {
     background: #2f303a;
+    padding: var(--padding-section);
 }
     .container-footer {
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 60px;
-        padding: var(--padding-section);
         @media screen and (min-width: 768px) {
             width: 768px;
         }
@@ -41,8 +41,15 @@
 .address {
     padding-top: 20px;
     max-width: 231px;
+    .address__item {
+    @media screen and (min-width: 1200px) {
+            display: flex;
+            justify-content: flex-start;
+        }
+    }
     .address__item:not(:last-child) {
-    margin-bottom: 9px;}
+    margin-bottom: 9px;
+    }
         .address__map-place,
         .address__link {
             font-family: var(--main-font-family);
@@ -80,6 +87,10 @@
             text-transform: uppercase;
             color: #ffffff;
             margin-bottom: 20px;
+            @media screen and (min-width: 1200px) {
+                display: flex;
+                justify-content: flex-start;
+            }
         }
 }
 
