--- a/sass/components/_header-nav-contact.scss
+++ b/sass/components/_header-nav-contact.scss
@@ -84,14 +84,17 @@
     line-height: 1.17;
     letter-spacing: 0.02em;
     color: #2196F3;
+    margin-bottom: 32px;
     @media screen and (min-width: 768px) {
         font-size: 12px;
         line-height: 1.14;
         color: #757575;
+        margin: 0;
     }
     @media screen and (min-width: 1200px) {
         font-size: 14px;
         line-height: 1.14;
+        margin: 0;
     }
 }
 
@@ -104,11 +107,12 @@
 
 .mob-menu-soc {
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
 }
 
 .mob-menu-soc__item {
-    padding-right: 9px;
+    padding-right: 10px;
     padding-left: 10px;
         &:first-child {
             padding-left: 0;
