--- a/sass/components/_index-peculiarities.scss
+++ b/sass/components/_index-peculiarities.scss
@@ -1,9 +1,6 @@
-// .peculiarities {
-//     padding: var(--padding-section);
-// }
-
-.container-peculiarities {
+.peculiarities {
     padding: var(--padding-section);
+    
     @media screen and (min-width: 1200px) {
         padding: var(--padding-section-desktop);
     }
