--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,12 +3,11 @@
     top: 0;
     width: 100%;
     height: 100%;
-    padding: 93px 15px;
     background: rgba(0, 0, 0, 0.2);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
         visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     @media screen and (min-width: 768px) {
-        padding: 207px 159px;
+        margin: 0 auto;
     }
     @media screen and (min-width: 1200px) {
         padding: 0;
@@ -16,14 +15,17 @@
 }
 
 .modal {
-    width: 100%;
-    height: 609px;
-    padding: 8px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 450px;
+    max-height: 609px;
+    padding: 40px;
     background: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    transform: translate(0, 0) scale(1);
+    transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     @media screen and (min-width: 1200px) {
         position: absolute;
@@ -36,17 +38,16 @@
 }
 
 .modal-backdrop.is-hidden .modal {
-    transform: translate(0, 0) scale(0);
+    transform: translate(-50%, -50%) scale(0);
     @media screen and (min-width: 1200px) {
         transform: translate(-50%, -50%) scale(0);
     }
 }
 
 .modal__close-btn {
-    // position: absolute;
-    // top: 8px;
-    // right: 8px;
-    margin-left: auto;
+    position: absolute;
+    top: 8px;
+    right: 8px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -71,7 +72,6 @@
     flex-direction: column;
     align-items: center;
     gap: 30px;
-    padding: 0 32px;
 }
 
 .modal-form__title {
@@ -143,7 +143,7 @@
     line-height: 1.16;
     letter-spacing: 0.03em;
     color: #757575;
-    padding-left: 36px;
+    padding-left: 24px;
     .modal-from__checkbox-icon {
             position: absolute;
             top: 0;
@@ -152,11 +152,14 @@
             height: 15px;
             border: 2px solid #212121;
             border-radius: 2px;
-            margin-left: 12px;
             // transform: translateY(25%);
             transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1),
                 background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
                 border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            @media screen and (min-width: 1200px) {
+                margin-left: 12px;
+                padding-left: 36px;
+                }
         }
 }
 
