--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -19,7 +19,7 @@
     top: 50%;
     left: 50%;
     width: 450px;
-    max-height: 609px;
+    height: 609px;
     padding: 40px;
     background: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
